2015-06-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/base/getauthtoken.py (Authorization): Fixed a SSL error
	to open the Twitter Authorization page with old python version (<
	2.7.9) (issue 77).

2015-05-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.4.5 release.
	* plugins/base/getauthtoken.py (Authorization): Fixed a SSL error
	  to open the Twitter Authorization page (issue 77).

2015-02-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.4.4 release.
	* window.py (NotebookPopUpMenu): Added new gsetting key of
	  smart-tab-close.  User can delete only tabs without name or
	  temporary tabs from tab menu item.

2015-02-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* view.py (FeedWebViewScroll): Improved auto scroll stop timer.

2015-02-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* facebook/account.py (AuthorizedFacebookAccount._error_cb): Fixed
	  an error message encode bug.

2014-12-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* facebook/entry.py (FacebookEntry): Fixed facebook image links
	(issue #76).

2014-12-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* share/gfeedline.xml.in: Added AppData.

2014-11-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.4.3 release.

2014-11-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* tweetentry.py (TwitterEntities.convert): Added support for
	  Twitter extended entities (multiple images on a Twitter entry).

2014-11-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* ast.po: Added new Asturian translation.  Thanks Ḷḷumex03!
	* twitter/assistant.py (TwitterAuthAssistant): Added a check if
	  the Twitter authentication is completed.

2014-11-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* facebook/account.py: Added support for Facebook Authentication
	  Error Subcodes.

2014-10-31  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* filterliststore.py (FilterListStore.expire): Fixed a
	  filterliststore expiration bug (issue #75).

2014-10-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
