@@ -57,6 +57,11 @@
       <summary>Timeline order</summary>
       <description>Determines the Timeline order, 0: Default, 1: Ascending, 2: Descending.</description>
     </key>
+    <key name="auto-scroll-delay" type="i">
+      <default>10</default>
+      <summary>Auto scroll delay</summary>
+      <description>Determines auto scroll unlock delay (secounds).  Auto scroll is locked when window is scrolled or the pointer is on URLs. The lock is unlocked after 10 secounds by default. If the delay value is less than 0, auto scroll is disable.</description>
+    </key>
     <key name="use-system-font" type="b">
       <default>false</default>
       <summary>Use System Document Font</summary>
