@@ -1,5 +1,7 @@
 2015-06-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* view.py (FeedWebViewScroll.pause): Added new gsetting key of
+	  auto-scroll-delay.
 	* plugins/base/getauthtoken.py (Authorization): Fixed a SSL error
 	to open the Twitter Authorization page with old python version (<
 	2.7.9) (issue 77).
